2005-09-23  Ahmon Dancy  <dancy@dancy>
1.1.36
	
	* maild.cl: Log when maild is terminated via signal.

	* auth.cl: Adding to repository (late).

2005-09-22  Ahmon Dancy  <dancy@dancy>
1.1.35
	
	* Fix client authentication sanity check in maild.cl

2005-09-21  Ahmon Dancy  <dancy@dancy>
1.1.34

	* Added support for client authentication using plain-text
	mechanisms (which allow for the standard password database
	mechanisms to be used).  By default, ssl is required before
	authentication can be performed (so that the plaintext passwords
	are not transferred in the clear).  

	* maild.cl:  Moved the /tmp/maild.trace stuff to smtp-server.cl.

	* sasl.cl: New.

	* smtp-server-checkers.cl:  rcpt-to checkers now take the SMTP
	session structure as the first argument.  The relay checker now
	checks to see if the client is authenticate.  If so, then relaying
	is allowed.  

	* smtp-server.cl:  Only open /tmp/maild.trace if the REP server is
	running. 

2005-09-16  Ahmon Dancy  <dancy@dancy>
1.1.33
	
	* Bugfix from 1.1.32.  Allow EHLO/HELO again after STARTTLS.

2005-09-15  Ahmon Dancy  <dancy@dancy>
1.1.32
	
	* Added support for SMTP/SSL (on port 465) and STARTTLS on port 25.

2005-09-07  root  <root@gills.dancysoft.com>
1.1.31
	
	* emailaddr.cl: In quoted text, loosen the restrictions on the
	allowed characters.  Yahoo allows 8-bit characters to pass
	through.

2005-06-15  root  <root@gills.dancysoft.com>
1.1.30
      
	* deliver-smtp.cl: Fixed bug when greylist is enabled and
	auto-whitelisting outgoing recips is enabled and the sender is <>.

	* queue-process.cl: Fixed typo in a log message.

2005-06-15  Ahmon Dancy  <dancy@dancy>
1.1.29

       * aliases.cl, mailer.cl, recips.cl, MAILERS.txt

       The recip struct has changed.  Do a clean build.
	
       Fixes to the address extension stuff.  As a side effect, some
       incompatible changes to the way mailers work have been made:
	
	********** Incompatible changes made **************
